--- a/config/locales/de_DE.yml
+++ b/config/locales/de_DE.yml
@@ -259,9 +259,14 @@ de_DE:
     search:
       start: Beginne die Suche...
   landing:
-    about: "Dozenten der HfM Karlsruhe können hier einen Benutzeraccount anlegen um Videokonferenzen zu erstellen. Sie werden nach kurzer Zeit freigeschalten. Studierende brauchen sich nicht zu registrieren. Sie nehmen an den Konferenzen über die Einladungs-Links der Dozenten teil."
-    welcome: Willkommen zu BigBlueButton auf conf.hfm.eu
-    video: Anleitung zur Verwendung von Greenlight
+    about_og_hfm: Der Videokonferenz- und Online-Lehre-Dienst der HfM Karlsruhe
+    welcome_hfm: Willkommen zu BigBlueButton auf
+    about_hfm_1: Dozenten der <strong>Hochschule für Musik Karlsruhe</strong> können hier einen Benutzeraccount einrichten, um den Dienst BigBlueButton für Videokonferenzen und Online-Unterricht zu nutzen.
+    about_hfm_2: Nach ihrer Registrierung wird ihr Account freigeschaltet und Sie können BBB als Initiator nutzen.
+    about_hfm_3: Studierende brauchen sich <strong>nicht</strong> zu registrieren. Sie nehmen an den Konferenzen über Einladungs-Links (versendete URLs) teil.
+    # about: "Dozenten der HfM Karlsruhe können hier einen Benutzeraccount anlegen um Videokonferenzen zu erstellen. Sie werden nach kurzer Zeit freigeschalten. Studierende brauchen sich nicht zu registrieren. Sie nehmen an den Konferenzen über die Einladungs-Links der Dozenten teil."
+    # welcome: Willkommen zu BigBlueButton auf conf.hfm.eu
+    # video: Anleitung zur Verwendung von Greenlight
     upgrade: "Zeigen Sie mir, wie ich auf Version 2.0. update!"
     version: "Wir haben eine neue Version von Greenlight veröffentlicht, aber Ihre Datenbank ist damit nicht kompatibel."
   language_default: Voreinstellung (Browsersprache)
