--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -260,9 +260,14 @@ en:
     search:
       start: Start searching...
   landing:
-    about: "Teachers of University of Music Karlsruhe can register an account here to start video conferences. Your account will be approved after a short while. Students don't need to register. They can join the video conferences with an invitation link of the teachers."
-    welcome: Welcome to BigBlueButton on conf.hfm.eu
-    video: Tutorial on using Greenlight
+    about_og_hfm: Der Videokonferenz- und Online-Lehre-Dienst der HfM Karlsruhe
+    welcome_hfm: Willkommen zu BigBlueButton auf
+    about_hfm_1: Dozenten der <strong>Hochschule für Musik Karlsruhe</strong> können hier einen Benutzeraccount einrichten, um den Dienst BigBlueButton für Videokonferenzen und Online-Unterricht zu nutzen.
+    about_hfm_2: Nach ihrer Registrierung wird ihr Account freigeschaltet und Sie können BBB als Initiator nutzen.
+    about_hfm_3: Studierende brauchen sich <strong>nicht</strong> zu registrieren. Sie nehmen an den Konferenzen über Einladungs-Links (versendete URLs) teil.
+    # about: "Teachers of University of Music Karlsruhe can register an account here to start video conferences. Your account will be approved after a short while. Students don't need to register. They can join the video conferences with an invitation link of the teachers."
+    #welcome: Welcome to BigBlueButton on conf.hfm.eu
+    #video: Tutorial on using Greenlight
     upgrade: Show me how to upgrade to 2.0!
     version: We've released a new version of Greenlight, but your database isn't compatible.
   language_default: Default (browser language)
