--- a/config/locales/de_DE.yml
+++ b/config/locales/de_DE.yml
@@ -264,6 +264,7 @@ de_DE:
     about_hfm_1: Dozenten der <strong>Hochschule für Musik Karlsruhe</strong> können hier einen Benutzeraccount einrichten, um den Dienst <a href="https://bigbluebutton.org/">BigBlueButton</a> für Videokonferenzen und Online-Unterricht zu nutzen.
     about_hfm_2: Nach ihrer Registrierung wird Ihr Account freigeschaltet und sie können BBB als Initiator nutzen.
     about_hfm_3: Studierende brauchen sich <strong>nicht</strong> zu registrieren. Sie nehmen an den Konferenzen über Einladungs-Links (versendete URLs) teil.
+    welcome: Willkommen zu BigBlueButton auf conf.hfm.eu
     # about: "Dozenten der HfM Karlsruhe können hier einen Benutzeraccount anlegen um Videokonferenzen zu erstellen. Sie werden nach kurzer Zeit freigeschalten. Studierende brauchen sich nicht zu registrieren. Sie nehmen an den Konferenzen über die Einladungs-Links der Dozenten teil."
     # welcome: Willkommen zu BigBlueButton auf conf.hfm.eu
     # video: Anleitung zur Verwendung von Greenlight
@@ -316,7 +317,7 @@ de_DE:
         more-info: "Um sich Ihre neuen Rechte anzusehen, besuchen Sie %{url}."
         subtitle: "%{role} Rechte erteilt"
       verify_email:
-        welcome: "Willkommen zu Ihrem persönlichem Bereich, %{name}!"
+        welcome: "Willkommen BigBlueButton auf conf.hfm.eu, %{name}!"
         success: "Durch den Einsatz von %{bigbluebutton}, können Sie Ihre eigenen Räume erstellen, dort Konferenzen durchführen und mit anderen zusammenarbeiten."
         username: "Ihr Benutzername ist  %{email}."
         verify: "Zur Kontoverifikation, klicken Sie bitte auf den untenstehenden Link."
