--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -265,9 +265,9 @@ en:
     about_hfm_1: Teachers of <strong>University of Music Karlsruhe</strong> can register an account here to use the service <a href="https://bigbluebutton.org/">BigBlueButton</a> for video conferences and online teaching.
     about_hfm_2: After your registration your account will be activated and you can use BBB to initiate conferences.
     about_hfm_3: Students <strong>do not</strong> require to register. They join the conferences via invitation link.
+    welcome: Welcome to BigBlueButton on conf.hfm.eu
     # about: "Teachers of University of Music Karlsruhe can register an account here to start video conferences. Your account will be approved after a short while. Students don't need to register. They can join the video conferences with an invitation link of the teachers."
-    #welcome: Welcome to BigBlueButton on conf.hfm.eu
-    #video: Tutorial on using Greenlight
+    # video: Tutorial on using Greenlight
     upgrade: Show me how to upgrade to 2.0!
     version: We've released a new version of Greenlight, but your database isn't compatible.
   language_default: Default (browser language)
@@ -317,7 +317,7 @@ en:
         more-info: To view your new abilities please visit %{url}.
         subtitle: "%{role} Rights Granted"
       verify_email:
-        welcome: Welcome to your personal space, %{name}!
+        welcome: Welcome to BigBlueButton on conf.hfm.eu, %{name}!
         success: Leveraging %{bigbluebutton}, you can create your own rooms to host sessions and collaborate with others.
         username: Your username is %{email}.
         verify: To verify your account, just click the button below.
