--- a/config/locales/de_DE.yml
+++ b/config/locales/de_DE.yml
@@ -317,7 +317,7 @@ de_DE:
         more-info: "Um sich Ihre neuen Rechte anzusehen, besuchen Sie %{url}."
         subtitle: "%{role} Rechte erteilt"
       verify_email:
-        welcome: "Willkommen BigBlueButton auf conf.hfm.eu, %{name}!"
+        welcome: "Willkommen zu BigBlueButton auf conf.hfm.eu, %{name}!"
         success: "Durch den Einsatz von %{bigbluebutton}, können Sie Ihre eigenen Räume erstellen, dort Konferenzen durchführen und mit anderen zusammenarbeiten."
         username: "Ihr Benutzername ist  %{email}."
         verify: "Zur Kontoverifikation, klicken Sie bitte auf den untenstehenden Link."
